--- a/src/app/components/main/dashboard/dashboard.scss
+++ b/src/app/components/main/dashboard/dashboard.scss
@@ -117,6 +117,7 @@
     	display: flex;
     	flex-flow: column;
         flex-basis: 440px;
+        flex-shrink: 0;
         margin-top: 20px;
         margin-bottom: 20px;
         .statistics{
@@ -133,6 +134,11 @@
             flex-grow: 1;
             margin-top: 0px;
             flex-flow: column;
+            .brokerage-container {
+                overflow: auto;
+                max-height:400px;
+                padding-right: 20px;
+            }
             .brokerage-item {
                 display: flex;
                 margin-top: 20px;
