--- a/src/app/components/main/dashboard/dashboard.scss
+++ b/src/app/components/main/dashboard/dashboard.scss
@@ -58,6 +58,7 @@
                 min-height: 150px;
                 max-height: 200px;
                 overflow: auto;
+                padding-right: 20px;
                 .appointment {
                   border-radius: 5px;
                   border: solid 1px #e7ecf1;
