Block Chain height and popup overlay

--- a/src/app/components/main/blockchain/blockchain.html
+++ b/src/app/components/main/blockchain/blockchain.html
@@ -7,9 +7,9 @@
 		Block chain
 	</div>
 	<div class="blocks" ng-if="vm.expanded">
-		<div ng-mouseover="vm.fetchInfo(block.number)" class="block-wrapper" ng-repeat="block in vm.currentBlocks" ng-if="$index >= vm.startFrom">
+		<div id="blockchain-{{block.number}}" ng-mouseover="vm.fetchInfo(block.number)" class="block-wrapper" ng-repeat="block in vm.currentBlocks" ng-if="$index >= vm.startFrom">
 			<div class="block">{{block.number}}</div>
-			<div class="info">
+			<div class="info" id="blockinfo-{{block.number}}">
 				<div ng-if="block.timestamp" style="padding-bottom: 5px;">Date: {{block.timestamp}}</div>
 				<div ng-if="block.timestamp">Type: Invocation</div>
 				<img ng-if="!block.timestamp" style="width: 40px; height: 40px;" src="/assets/images/loading.gif" alt="">
