--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -62,6 +62,7 @@ table {
 {
     height: 40px;
     width: 40px;
+    min-width: 40px;
     margin-right: 10px;
     background: rgb(130, 148, 167);
     color: white;
