--- a/src/app/components/main/blockchain/blockchain.scss
+++ b/src/app/components/main/blockchain/blockchain.scss
@@ -29,7 +29,7 @@
 		}
 	}
 	.blocks {
-		 padding-top: 53px;
+		 padding-top: 10px;
 		 padding-bottom: 10px;
 		 overflow-x: scroll;
 		 background-color: #fff;
@@ -44,25 +44,24 @@
 			    opacity: 0.4;
 			}
 			.info {
-			    position: absolute;
+			    position: fixed;
 			    border-radius: 5px;
 			    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
 			    background: #ffffff;
 			    padding: 10px;
 			    padding-top: 5px;
 			    text-align: center;
-			    top: -48px;
 			    width: 150px;
 			    display: none;
 			    color: rgba(70, 100, 121, 0.8);
 			    z-index: 7;
-			    left: -36px;
 			    font-size: 11px;
+			    bottom: 84px;
 				&::after {
 				  content: " ";
 				    width: 0;
 				    height: 0;
-				    top: 43px;
+				    bottom: -7px;
 				    border-left: 7px solid transparent;
 				    border-right: 7px solid transparent;
 				    border-top: 7px solid #f5f5f5;
