--- a/src/app/components/main/calendar/calendar.html
+++ b/src/app/components/main/calendar/calendar.html
@@ -1,4 +1,5 @@
-<div style="margin-bottom:30px;"><md-event-calendar
+<div style="margin-bottom:30px;">
+<md-event-calendar
   md-events="events"
   md-event-click="eventClicked($selectedEvent)"
   md-label="title",
