--- a/src/app/components/main/toolbar/toolbar.html
+++ b/src/app/components/main/toolbar/toolbar.html
@@ -32,3 +32,6 @@
 		</a>	
 	</div>
 </div>
+<md-progress-linear id="toolbar-progress" class="md-warn" ng-if="$root.loadingProgress"
+    md-mode="indeterminate">
+</md-progress-linear>
