--- a/src/app/components/main/dashboard/dashboard.html
+++ b/src/app/components/main/dashboard/dashboard.html
@@ -138,13 +138,7 @@
 		<!-- <img style="position:absolute;" src="/assets/images/broker-dashboard-background.png"> -->
 		<img style="position: absolute;width: 300px;min-width: 300px; height:100%; z-index: 0;" ng-src="{{vm.bgurl}}">
 		<div class="rightSide" style="max-height: 350px; z-index: 3;">
-		<md-event-calendar>
-            <md-event-calendar-header class="md-center">
-                <md-event-calendar-prev></md-event-calendar-prev>
-                <md-event-calendar-title></md-event-calendar-title>
-                <md-event-calendar-next></md-event-calendar-next>
-            </md-event-calendar-header>
-        </md-event-calendar>
+			<mini-calendar style="z-index: 3;">
         </div>
 
 		<div class="appointments" style="z-index: 3;">
