Fixing gender save

--- a/src/app/components/main/settings/settings.html
+++ b/src/app/components/main/settings/settings.html
@@ -8,7 +8,7 @@
 
 	</div>
 	<div class="bottom">
-		<a class="cancel-btn">Cancel</a>
+		<a class="cancel-btn" ng-click="vm.cancel()">Cancel</a>
 		<a class="save-btn" ng-click="vm.save()">Save</a>
 	</div>
 </div>
