--- a/src/app/components/main/profile-form/profileform.html
+++ b/src/app/components/main/profile-form/profileform.html
@@ -1,11 +1,11 @@
 <form name="profileForm">
-
 	<div ng-repeat="field in vm.userFields">
 		<div class="input">
 				<label for="kyc-{{field.key}}">
 					{{field.description}} *
 				</label>
-				<input name="kyc-{{field.key}}" type="text" ng-model="field.value" required ng-disabled="field.disabled || vm.isBroker">
+				<input ng-class="{error:field.error}" name="kyc-{{field.key}}" type="text" ng-model="field.value" required ng-disabled="field.disabled || vm.isBroker">
+				<div ng-if="field.error" class="error">{{field.error}}</div>
 			</div>
 	</div>
 	<div ng-repeat="field in vm.fields" ng-if="vm.isBroker">
@@ -42,6 +42,7 @@
 				</label>
 				<select ng-disabled="vm.isBroker" name="kyc-{{field.questionId}}" ng-model="field.selectedValue" ng-options="option.answerDescription for option in field.answersList">
 				</select>
+				<div ng-if="field.error" class="error">{{field.error}}</div>
 				<img src="/assets/images/dropdown.png" class="dropdown">
 			</div>
 			<div class="input" ng-switch-when="RADIO">
@@ -53,7 +54,8 @@
 					<label ng-repeat="option in field.answersList">
 						{{option.answerDescription}}
 						<input ng-disabled="vm.isBroker" style="width: 20px;height: auto;" type="radio" ng-value="{{option.answerId}}" ng-model="field.answerId" ng-required="field.requireField==='REQUIRED'">
-					</label>					
+					</label>
+					<div ng-if="field.error" class="error">{{field.error}}</div>					
 				</div>
 			</div>
 			<div class="input" ng-switch-default>
@@ -61,7 +63,8 @@
 					{{field.questionDesc}}
 					<span ng-if="field.requireField==='REQUIRED'">*</span>
 				</label>
-				<input ng-disabled="vm.isBroker" name="kyc-{{field.questionId}}" type="{{field.validationType}}" ng-model="field.answerText" ng-required="field.requireField==='REQUIRED'">
+				<input ng-class="{error:field.error}" ng-disabled="vm.isBroker" name="kyc-{{field.questionId}}" type="{{field.validationType}}" ng-model="field.answerText" ng-required="field.requireField==='REQUIRED'">
+				<div ng-if="field.error" class="error">{{field.error}}</div>
 			</div>
 		</div>
 	</div>		
